--- a/budD_android/app/src/main/AndroidManifest.xml
+++ b/budD_android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewPage_selectInter"></activity>
+        <activity android:name=".NewPage_selectCover"></activity>
+        <activity android:name=".NewPage_selectInter" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
