--- a/budD_android/app/src/main/AndroidManifest.xml
+++ b/budD_android/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewPage_selectCover"></activity>
+        <activity android:name=".NewPage_write"></activity>
+        <activity android:name=".NewPage_selectCover" />
         <activity android:name=".NewPage_selectInter" />
-        <activity android:name=".MainActivity">
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
