--- a/budD_android/app/src/main/AndroidManifest.xml
+++ b/budD_android/app/src/main/AndroidManifest.xml
@@ -9,15 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewPage_write"></activity>
+        <activity android:name=".Page_view"></activity>
+        <activity android:name=".NewPage_write" />
         <activity android:name=".NewPage_selectCover" />
-        <activity android:name=".NewPage_selectInter" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".NewPage_selectInter">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".LoginActivity">
+
         </activity>
     </application>
 
