--- a/budD_android/app/src/main/AndroidManifest.xml
+++ b/budD_android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewPage_write"></activity>
+        <activity android:name=".DrawerActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".NewPage_write" />
         <activity android:name=".NewPage_selectCover" />
         <activity android:name=".NewPage_selectInter" />
         <activity android:name=".LoginActivity">
