--- a/budD_android/app/src/main/AndroidManifest.xml
+++ b/budD_android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".NewPage_write" />
         <activity android:name=".NewPage_selectCover" />
         <activity android:name=".NewPage_selectInter" />
+        <activity android:name=".Page_view"></activity>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
