--- a/budD_android/app/src/main/AndroidManifest.xml
+++ b/budD_android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DrawerActivity"></activity>
+        <activity android:name=".SettingActivity"></activity>
+        <activity android:name=".DrawerActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".NewPage_write" />
         <activity android:name=".NewPage_selectCover" />
